WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
45767
Hang processing href attribute containing a million slashes
https://bugs.webkit.org/show_bug.cgi?id=45767
Summary
Hang processing href attribute containing a million slashes
Darin Adler
Reported
2010-09-14 11:27:17 PDT
Hang processing href attribute containing a million slashes
Attachments
Patch
(10.26 KB, patch)
2010-09-14 11:48 PDT
,
Darin Adler
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2010-09-14 11:44:20 PDT
<
rdar://problem/8265498
>
Darin Adler
Comment 2
2010-09-14 11:48:04 PDT
Created
attachment 67580
[details]
Patch
Geoffrey Garen
Comment 3
2010-09-14 14:02:30 PDT
Comment on
attachment 67580
[details]
Patch r=me
Darin Adler
Comment 4
2010-09-14 14:10:38 PDT
Comment on
attachment 67580
[details]
Patch Clearing flags on attachment: 67580 Committed
r67496
: <
http://trac.webkit.org/changeset/67496
>
Darin Adler
Comment 5
2010-09-14 14:10:42 PDT
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 6
2010-09-14 14:44:02 PDT
http://trac.webkit.org/changeset/67496
might have broken Qt Linux Release The following changes are on the blame list:
http://trac.webkit.org/changeset/67496
http://trac.webkit.org/changeset/67494
http://trac.webkit.org/changeset/67495
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug